fix bug where links in header were unlickable
Previously, the main area had a 50px top margin that overlapped header. This made
it so that links in the header didn't work. Now, we are using calc to instead
just make the main area automatically the right size.

--- a/app/assets/stylesheets/docs.scss
+++ b/app/assets/stylesheets/docs.scss
@@ -14,11 +14,9 @@
 
 .bitcoin {
     overflow: hidden;
-    height: 100vh;
+    height: calc(100vh - 50px);
     width: 100%;
     position: relative;
-    margin-top: -50px;
-    padding-top: 50px;
     @include noselect;
 
     a:link {
